# mini_projects

./: README.md
C/: kernel.c
GUIformbyTkinter/: index.py
Ml/imageClassifier/: imageclassifier.py  notebook33d1566acd.ipynb
Python/: fbiWantedApi.py
Python/GUIformbyTkinter/: index.py
Python/Image2Text/: app.py
Python/IpSpoof/: index.py
Python/Text-to-Handwriting(Not Working)/: index.py  pywhatkit_dbs.txt
Python/Tracer/: Tracer.py
Python/ig_reel_download/: index.py
Python/instagramBot/: index.py
Python/mp3_extractor/: index.py
Python/qrcodeGenerator/: index.py
Python/selenium/: index.py
Python/speech-stt/: index.py  pyvenv.cfg
Python/video_frame_cutter/: index.py
Python/ytdownloader/: index.py
Text-to-Handwriting(Not Working)/: index.py  sendWhatsappMsg.py
Tracer/: Tracer.py  Tracer.spec
expo/reminderz/: app.json  package-lock.json  package.json
frontend/archeryTarget/: index.html  styles.css
frontend/hit-the-mouse/: script.js
frontend/portfolio/: index.html
frontend/todolist/: package-lock.json
go/: README.md  go.mod
go/email-validator/: main  main.go
go/server/: wiki.go
go/simpleGui/: main.go
instagramBot/: index.py  run.sh
js/autocompletion/: :  index.html
js/framer-motion/: package-lock.json  package.json
js/hit-the-mouse/: index.html  styles.css
js/learn-next/: package-lock.json  package.json
js/next-js-page-transition/: package.json
js/otp-based-login-firebase/: package-lock.json  package.json
qrcodeGenerator/: index.py
rustc/zip-crate/: Cargo.toml
rustc/zip-crate/src/: lib.rs
(+66 files in other folders)
